# PVZ-rs

./: .gitignore  ANALYSIS_REPORT.md  Cargo.toml  README.md  SDL2_exports.txt  TODO.md  build.rs  build_mixer_ext.ps1  check.py  check_names.py  compare.py  diff.yaml  diff_report.yaml  functions_manifest.json  glad_loader.c  real_missing.json  rust_functions_manifest.json  show_diff2.py  test_pak.rs
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/ffi/: libc.rs  libopenmpt.rs  loader.rs  mod.rs  opengl.rs  sdl2.rs  sdl_mixer.rs
src/framework/: buffer.rs  color.rs  common.rs  desc_parser.rs  flags.rs  key_codes.rs  mod.rs  mod_val.rs  mt_rand.rs  perf_timer.rs  point.rs  ratio.rs  rect.rs  reg_emu.rs  resource_manager.rs  resources.rs  sexy_app_base.rs  sexy_matrix.rs  tod_debug.rs  xml_parser.rs
src/framework/graphics/: font.rs  gl_image.rs  gl_interface.rs  graphics.rs  image.rs  image_font.rs  memory_image.rs  mod.rs  native_display.rs  quantize.rs  shared_image.rs
src/framework/imagelib/: mod.rs
src/framework/paklib/: mod.rs
src/framework/sound/: mod.rs  (+6 more)
src/lawn/: board.rs  challenge.rs  coin.rs  cursor_object.rs  cutscene.rs  game_enums.rs  game_object.rs  grid_item.rs  lawn_app.rs  lawn_common.rs  lawn_mower.rs  mod.rs  plant.rs  projectile.rs  seed_packet.rs  tool_tip_widget.rs  zen_garden.rs  zombie.rs
src/todlib/: attachment.rs  data_array.rs  definition.rs  effect_system.rs  filter_effect.rs  mod.rs  reanim_atlas.rs  reanimator.rs  sw_tri.rs  tod_common.rs  tod_debug.rs  tod_foley.rs  tod_list.rs  tod_particle.rs  tod_string_file.rs  trail.rs
(+55 files in other folders)
