[package]
name = "pvz-portable-rust"
version = "0.1.0"
edition = "2024"
description = "Plants vs Zombies Portable — Rust 翻译版本"

[lib]
name = "pvz_portable"
path = "src/lib.rs"

[[bin]]
name = "pvz-portable"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "0.37", features = ["bundled"] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg", "gif", "bmp", "tga", "webp", "tiff"]
