[package]
name = "pvz-portable-rust"
version = "0.1.0"
edition = "2021"
description = "Plants vs Zombies Portable — Rust 翻译版本"

[lib]
name = "pvz_portable"
path = "src/lib.rs"

[[bin]]
name = "pvz-portable"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "0.37", features = ["bundled", "mixer"] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg", "gif", "bmp", "tga", "webp", "tiff"]

[build-dependencies]
# Windows 下载 SDL2_mixer 开发包
cfg-if = "1.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"